changed the pyspark connectivity test to be a notebook and formatted the dashboard notebook

--- a/scripts/notebooks/dashboards.ipynb
+++ b/scripts/notebooks/dashboards.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "source": [
     "**Note:** Keep as a string when encountering error on the dashboard. The below is correct\n",
-    "Coalece(jr.result_state, 'UNKNOWN') AS result_state"
+    "`Coalece(jr.result_state, 'UNKNOWN') AS result_state`"
    ]
   },
   {
