adjusted dbx workspace name for clarity of region, changed catalog resources to use _ instead of - due to sql issues, fixed warnings of unused variables and errors, adjusted test notebook to reflect new names, removed backend resources from iam file

--- a/scripts/notebooks/test_connection.ipynb
+++ b/scripts/notebooks/test_connection.ipynb
@@ -25,11 +25,11 @@
     "\n",
     "# Configuration for storage paths, catalog, and schemas\n",
     "CONFIG = {\n",
-    "    'catalog_name': 'client_dev_catalog',\n",
-    "    'bronze_schema': 'bronze_container_schema',\n",
-    "    'gold_schema': 'gold_container_schema',\n",
-    "    'storage_account': 'datalake account name',\n",
-    "    'bronze_path': 'abfss://bronze@{storage_account}.dfs.core.windows.net/vitals/date=*/hour=*/*.gz',\n",
+    "    'catalog_name': 'catalog_name',\n",
+    "    'bronze_schema': 'bronze_schema',\n",
+    "    'gold_schema': 'gold_schema',\n",
+    "    'storage_account': 'datalake name',\n",
+    "    'bronze_path': 'abfss://bronze@{storage_account}.dfs.core.windows.net/vitals',\n",
     "    'gold_path': 'abfss://gold@{storage_account}.dfs.core.windows.net/output'\n",
     "}\n",
     "\n",
