removed metrics_enabled from diagnostic setting, paramatized storage credential in unity catalog, updated test connection notebook to output in delta lake, fixed string in sql warehouse, removed unused variable in root

--- a/scripts/notebooks/test_connection.ipynb
+++ b/scripts/notebooks/test_connection.ipynb
@@ -52,22 +52,27 @@
     "    spark.sql(f\"USE SCHEMA {CONFIG['bronze_schema']}\")\n",
     "    \n",
     "    # Read using bronze schema\n",
-    "    bronze_data_sample = spark.read.format(\"json\") \\\n",
-    "        .load(CONFIG['bronze_path']) \\\n",
-    "        .limit(2)\n",
+    "    print(\"Reading data from bronze container...\")\n",
+    "    bronze_data = spark.read \\\n",
+    "        .option(\"multiline\", \"true\") \\\n",
+    "        .option(\"inferSchema\", \"true\") \\\n",
+    "        .json(CONFIG['bronze_path']) \\\n",
+    "        .limit(10)\n",
+    "\n",
+    "    #bronze_data.cache()\n",
     "\n",
     "    print(\"Sample data:\")\n",
-    "    bronze_data_sample.show()\n",
+    "    bronze_data.show()\n",
     "\n",
     "    # Use gold schema\n",
     "    print(\"\\nUsing gold schema for writing...\")\n",
     "    spark.sql(f\"USE SCHEMA {CONFIG['gold_schema']}\")\n",
     "\n",
-    "    # Write using gold schema\n",
-    "    bronze_data_sample.write \\\n",
-    "        .format(\"parquet\") \\\n",
+    "    # Write using gold schema in delta lake, iceberg, or parquet\n",
+    "    bronze_data.write \\\n",
+    "        .format(\"delta\") \\\n",
     "        .mode(\"overwrite\") \\\n",
-    "        .save(CONFIG['gold_path'])\n",
+    "        .saveAsTable(f\"{CONFIG['catalog_name']}.{CONFIG['gold_schema']}.patient_data\")\n",
     "   \n",
     "    print(\"Write operation completed successfully\")\n",
     "       \n",
